# spfjack

./: Cargo.toml  README.md  package.json
src/: main.rs
src/actors/: mod.rs  resolver.rs  spf_cache.rs  spf_mechanism_processor.rs
src/dns/: dns_resolver.rs
src/domain/: mod.rs
src/spf/: mod.rs  processing_results.rs
