[package]
name = "spfjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = "0.21.1"
decon-spf = "0.2.4"
clap = "3.0.14"
tokio = {version="1", features=["full"]}
regex = "1"
log = "0.4"
bunt = "0.2"
indicatif = "0.16"